@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [mms] Fixed segfaults caused by SMTP debugging.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -3188,7 +3188,7 @@
    <date>2013-05-29</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [mms] Fixed segfaults caused by SMTP debugging.
    </notes>
   </release>
  </changelog>
