@@ -2,6 +2,7 @@
 v6.1.0-git
 ----------
 
+[mms] Fixed segfaults caused by SMTP debugging.
 
 
 ---------
